# DevDose

./: README.md
client/: filestructure.txt  package-lock.json  package.json
client/src/: App.js  index.js  store.js
client/src/components/: ArticleCard.js  Footer.js  Header.js  LoginForm.js  RegisterForm.js  UserProfile.js
client/src/pages/: ArticlePage.js  HomePage.js  LoginPage.js  ProfilePage.js  RegisterPage.js  SearchPage.js
client/src/reducers/: userSlice.js
client/src/services/: api.js
client/src/styles/: App.css
server/: .gitignore  Cargo.toml
server/src/: db.rs  handlers.rs  main.rs  routes.rs  test.rs
server/src/models/: analytics.rs  article.rs  comment.rs  like.rs  mod.rs  search.rs  user.rs
server/src/services/: auth.rs  content_aggregation.rs  mod.rs  search.rs  social.rs
