[package]
name = "DevDose-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.11" 
actix-web = "4"
actix-service = "2.0"  
actix-rt = "2"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mongodb = "2.4"
dotenv = "0.15"
scraper = "0.12"
jsonwebtoken = "8.1"
futures = "0.3"
futures-util = "0.3"
chrono = "0.4"
bcrypt = "0.12"
actix-web-actors = "4"
actix-cors = "0.6"
rss = "2.0"
xml = "0.8"
